--- a/src/test.html
+++ b/src/test.html
@@ -6,7 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-<!-- 111 -->
-<h1>테스트입니다</h1>
+
+
+    <div>
+
+        <div>
+            <div>권한 설정</div>
+            <div><input type="checkbox" value='all'> 메뉴 관리</div>
+            <div>사이트에서 사용하는 각각의 메뉴를 설정/관리합니다.</div>
+        </div>
+        <div>
+            <input type="checkbox" value='home'>홈</input>
+            <input type="checkbox" value='home'>전자결재</input>
+            <input type="checkbox" value='home'>인사관리</input>
+            <input type="checkbox" value='home'>시스템운영</input>
+            <input type="checkbox" value='home'>시설예약</input>
+            <input type="checkbox" value='home'>채팅/쪽지</input>
+            <input type="checkbox" value='home'>**메뉴코드 리스트로 불러와야함</input>
+        </div>
+    </div>
+    
 </body>
 </html>
